# plantswap

./: .gitignore  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: megalinter.yml
plant_swap_service/: .cspell.json  .markdown-link-check.json  .mega-linter.yml  Dockerfile  README.md  pyproject.toml
plant_swap_service/src/plant_swap/: main.py
plant_swap_webapp/: .dockerignore  Dockerfile  package.json
plant_swap_webapp/deplyoment/: nginx.default.conf
plant_swap_webapp/src/: App.js
plant_swap_webapp/src/api/: client.js  index.js  plants.js
