[tool.poetry]
name = "joeysplantswap"
version = "0.1.0"
description = ""
authors = ["Joeffison Silvério de Andrade <joeffison@gmail.com>"]
readme = "README.md"
packages = [{include = "plant_swap", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.5"
uvicorn = "^0.21.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^6.0.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
